fix transaction overflow

--- a/packages/bot-web-ui/src/assets/sass/trade-animation.scss
+++ b/packages/bot-web-ui/src/assets/sass/trade-animation.scss
@@ -61,6 +61,7 @@
     }
     &__overlay {
         border-top-left-radius: 0;
+        border-bottom-right-radius: $BORDER_RADIUS;
     }
     &__info {
         font-size: 10px;
