--- a/packages/bot-web-ui/src/assets/sass/transactions.scss
+++ b/packages/bot-web-ui/src/assets/sass/transactions.scss
@@ -60,10 +60,6 @@
     }
     &__content {
         height: calc(100% - 42px);
-
-        .list__animation-enter {
-            overflow: hidden;
-        }
     }
     &__item {
         display: grid;
@@ -103,8 +99,7 @@
 
     &__divider {
         border-top: 1px solid var(--general-section-1);
-        margin: 0 16px;
-        padding: 8px 0;
+        padding: 8px 16px;
 
         &-line {
             height: 4px;
